# metalog

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  autogen.sh  autogen2.sh  config.h.in  configure  configure.ac  metalog.conf  metalog.lsm.in  metalog.spec.in
gnulib/: .gitignore
gnulib/lib/: .gitignore  Makefile.am  poll.c  poll.in.h
gnulib/m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
lib/: Makefile.am  Makefile.in  poll.c  poll.in.h  sys_wait.in.h
m4/: gnulib-cache.m4  gnulib-comp.m4
man/: .cvsignore  Makefile.am  Makefile.in  metalog.8  metalog.8.in  metalog.conf.5  metalog.conf.5.in
src/: .cvsignore  Makefile.am  Makefile.in  bsd-getopt_long.c  bsd-getopt_long.h  fakesnprintf.c  fakesnprintf.h  gnu-getopt.c  gnu-getopt.h  gnu-getopt1.c  helpers.h  metalog.c  metalog.h  metalog_p.h  mysnprintf.c  mysnprintf.h  syslognames.h
